--- a/en.yml
+++ b/en.yml
@@ -263,7 +263,7 @@ en:
   footer:
     legal: Legal
     privpolicy: Privacy Policy
-    powered_by: Powered by Scholar | ZXIS Technologies.
+    powered_by: Powered by RigBetel Labs LLP® | All Rights Reserved 
   forgot_password:
     subtitle: Forgot Password
     email: Email
